# vpnaas

./: .dockerignore  .gitignore  README.md  config.py  confus.yaml  keys.yaml  pyproject.toml  redis.yaml  vpnaas.yaml  wg.yaml
confus/: Cargo.toml  Dockerfile
confus/src/: config.rs  confus.rs  main.rs  vpnaas.rs
helm/: .gitignore  Chart.yaml  fleet.yaml  values.yaml
helm/charts/: common-9999.tgz  saas-lib-0.1.0.tgz
helm/charts/common/: Chart.yaml
helm/charts/common/templates/: _helpers.tpl
helm/charts/vpnaas-lib/: Chart.yaml
helm/charts/vpnaas-lib/templates/: _microservice.yaml
helm/common/: values.yaml
helm/common/templates/: _microservice.tpl
helm/templates/: _helpers.tpl  ingress.yaml  microservices.yaml
keys/: Cargo.toml  Dockerfile  commands.py
keys/src/: config.rs  jwt.rs  jwt_claims.rs  keys.rs  main.rs  tests.rs  vpnaas.rs
proto/: vpnaas.proto
web/: Dockerfile  package-lock.json  package.json  rollup.config.js
web/public/: global.css  index.html
web/src/: App.css  App.svelte  utils.ts
web/src/components/: ConfigBox.svelte  Content.css  Content.svelte  ErrorBox.svelte  Header.svelte  LoginButton.svelte  PubkeyBox.svelte  UserInfo.svelte
web/src/grpc/: VpnaasServiceClientPb.ts  vpnaas_pb.d.ts  vpnaas_pb.js
web/src/services/: auth.ts  grpc.ts
web/src/stores/: errorStore.ts  userStore.ts
wg/: Cargo.toml  Dockerfile  build.rs  entrypoint.sh
wg-server/: Cargo.toml  README.md
wg-server/src/: main.rs  wg_server.rs
wg/src/: config.rs  main.rs  server.rs  vpnaas.rs  wg.rs
