[package]
name = "confus"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.4"
env_logger = "0.10.0"
log = "0.4.20"
prost = "0.12.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.10.2"
tonic-web = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
codegen-units = 1
lto = true
