[package]
name = "keys"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.0", features = ["aio", "tokio-comp", "r2d2", "connection-manager"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
prost = "0.11.8"
tonic = "0.9.1"
r2d2 = "0.8.10"
base64 = "0.21.0"
jsonwebtoken = "8.3.0"
serde = "1.0.160"
tonic-web = "0.9.2"
env_logger = "0.10.0"
log = "0.4.17"

[build-dependencies]
tonic-build = "0.9.1"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["sync"] }
tokio-stream = { version = "0.1.12", features = ["net"] }

[profile.release]
codegen-units = 1
lto = true
