[package]
name = "keys"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.3", features = ["aio", "tokio-comp", "r2d2", "connection-manager"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
prost = "0.12.1"
tonic = "0.10.2"
r2d2 = "0.8.10"
base64 = "0.21.4"
jsonwebtoken = "8.3.0"
serde = "1.0.188"
tonic-web = "0.10.2"
env_logger = "0.10.0"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["sync"] }
tokio-stream = { version = "0.1.14", features = ["net"] }

[profile.release]
codegen-units = 1
lto = true
