[package]
name = "wg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
failure = "0.1.8"
log = "0.4.17"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.9.1"
wireguard-uapi = "3.0.0-rc1"

[build-dependencies]
tonic-build = "0.9.1"
